--- a/src/public/locales/en/translation.json
+++ b/src/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "topBar": {
-    "title": "OpenAI Translator",
+    "title": "Miko Translation | Free AI Translation",
     "darkModeSwitcherTitle": "Switch Dark Mode"
   },
   "navbar": {
