--- a/src/public/locales/ja/translation.json
+++ b/src/public/locales/ja/translation.json
@@ -1,6 +1,6 @@
 {
   "topBar": {
-    "title": "OpenAI翻訳機",
+    "title": "Miko 翻訳 | フリーAI翻訳",
     "darkModeSwitcherTitle": "暗色モードに切り替える"
   },
   "navbar": {
