--- a/src/public/locales/zh/translation.json
+++ b/src/public/locales/zh/translation.json
@@ -1,6 +1,6 @@
 {
   "topBar": {
-    "title": "OpenAI 翻译器",
+    "title": "Miko 翻译 | 免费的人工智能翻译",
     "darkModeSwitcherTitle": "深色模式切换"
   },
   "navbar": {
